--- a/index.html
+++ b/index.html
@@ -1,195 +1,107 @@
-<!doctype html>
-<html class="no-js" lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Foundation | Welcome</title>
-  <link rel="stylesheet" href="css/foundation.css" />
-  <script src="js/vendor/modernizr.js"></script>
-</head>
-<div class = "contain-to-grid sticky">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Brian</title>
 
-<nav class="top-bar" data-topbar role="navigation">
-  <ul class="title-area">
-    <li class="name">
-      <h1><a href="#">Brian Parks</a></h1>
-    </li>
-    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-  </ul>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container">
 
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
-      <li class="active"><a href="#">Right Button Active</a></li>
-      <li class="has-dropdown">
-        <a href="#">--</a>
-        <ul class="dropdown">
-          <li><a href="#">First link in dropdown</a></li>
-          <li class="active"><a href="#">Active link in dropdown</a></li>
-        </ul>
-      </li>
-    </ul>
+    <br>
+    <br>
+    <div class="container marketing">
 
-    <!-- Left Nav Section -->
-    <ul class="left">
-      <li><a href="#">Projects</a></li>
-    </ul>
-  </section>
-</nav>
-</div>
-<body>
-
-  <div class="row">
-    <div class="large-12 columns">
-      <h1>Welcome</h1>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="large-12 columns">
-      <div class="panel">
-        <h3>Thanks for viewing my page!</h3>
-
-        <div class="row">
-          <div class="large-4 medium-4 columns">
-            <p><a href="https://github.com/brianjp07/">GitHub</a><br />Check out the projects I am working on.</p>
-          </div>
-          <div class="large-4 medium-4 columns">
-            <p><a href="https://cse.osu.edu">OSU - CSE </a><br />I am a student at The Ohio State University in Computer Science Engineering</p>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="large-8 medium-8 columns">
-      <h5>Here&rsquo;s your basic grid:</h5>
-      <!-- Grid Example -->
-
+      <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="large-12 columns">
-          <div class="callout panel">
-            <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
-          </div>
+        <div class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <h2>Programming</h2>
+          <p>Python, Java, Ruby, and C</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <h2>Security</h2>
+          <p>redacted</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <h2>Travel</h2>
+          <p>soon my dog of war.. soon</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Whoa <span class="text-muted">It'll blow your mind.</span></h2>
+          <p class="lead">cool</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="large-6 medium-6 columns">
-          <div class="callout panel">
-            <p>Six columns</p>
-          </div>
-        </div>
-        <div class="large-6 medium-6 columns">
-          <div class="callout panel">
-            <p>Six columns</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="large-4 medium-4 small-4 columns">
-          <div class="callout panel">
-            <p>Four columns</p>
-          </div>
-        </div>
-        <div class="large-4 medium-4 small-4 columns">
-          <div class="callout panel">
-            <p>Four columns</p>
-          </div>
-        </div>
-        <div class="large-4 medium-4 small-4 columns">
-          <div class="callout panel">
-            <p>Four columns</p>
-          </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
-      <hr />
+      <hr class="featurette-divider">
 
-      <h5>We bet you&rsquo;ll need a form somewhere:</h5>
-      <form>
-        <div class="row">
-          <div class="large-12 columns">
-            <label>Input Label</label>
-            <input type="text" placeholder="large-12.columns" />
-          </div>
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+          <p class="lead">2 + 3 = 6</p>
         </div>
-        <div class="row">
-          <div class="large-4 medium-4 columns">
-            <label>Input Label</label>
-            <input type="text" placeholder="large-4.columns" />
-          </div>
-          <div class="large-4 medium-4 columns">
-            <label>Input Label</label>
-            <input type="text" placeholder="large-4.columns" />
-          </div>
-          <div class="large-4 medium-4 columns">
-            <div class="row collapse">
-              <label>Input Label</label>
-              <div class="small-9 columns">
-                <input type="text" placeholder="small-9.columns" />
-              </div>
-              <div class="small-3 columns">
-                <span class="postfix">.com</span>
-              </div>
-            </div>
-          </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
-        <div class="row">
-          <div class="large-12 columns">
-            <label>Select Box</label>
-            <select>
-              <option value="husker">Husker</option>
-              <option value="starbuck">Starbuck</option>
-              <option value="hotdog">Hot Dog</option>
-              <option value="apollo">Apollo</option>
-            </select>
-          </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+          <p class="lead">Expecto Patronum</p>
         </div>
-        <div class="row">
-          <div class="large-6 medium-6 columns">
-            <label>Choose Your Favorite</label>
-            <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-            <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-          </div>
-          <div class="large-6 medium-6 columns">
-            <label>Check these out</label>
-            <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-            <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-          </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
-        <div class="row">
-          <div class="large-12 columns">
-            <label>Textarea Label</label>
-            <textarea placeholder="small-12.columns"></textarea>
-          </div>
-        </div>
-      </form>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
+
+
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2072 B. Irons, LLC. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
+
+    </div><!-- /.container -->
+
     </div>
-
-    <div class="large-4 medium-4 columns">
-      <h5>Try one of these buttons:</h5>
-      <p><a href="#" class="small button">Simple Button</a><br/>
-        <a href="#" class="small radius button">Radius Button</a><br/>
-        <a href="#" class="small round button">Round Button</a><br/>
-        <a href="#" class="medium success button">Success Btn</a><br/>
-        <a href="#" class="medium alert button">Alert Btn</a><br/>
-        <a href="#" class="medium secondary button">Secondary Btn</a></p>
-        <div class="panel">
-          <h5>So many components, girl!</h5>
-          <p>A whole kitchen sink of goodies comes with Foundation. Checkout the docs to see them all, along with details on making them your own.</p>
-          <a href="http://foundation.zurb.com/docs/" class="small button">Go to Foundation Docs</a>
-        </div>
-      </div>
-    </div>
-
-
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script>
-    $(document).foundation();
-    </script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
-  </html>
+</html>
